--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -140,9 +140,9 @@
 .button{
     margin-top: 100px;
     border-radius: 20px;
-    width: 100px;
+    width: 250px;
     height: 40px;
-    background-color: #ff9c00;
+    background-color: #e8a326;
 
 }
 .button:hover{
