--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -18,21 +18,25 @@
     background-color: #121212;
 }
 .brand {
+    margin-left: 10px;
+}
+.social{
     width: 40%;
-    display: flex;
 }
 .link {
     font-weight: 400;
     color: #fff !important;
     letter-spacing: 0.8px;
     font-size: 18px;
-
+    text-decoration: none;
+    display: flex;
+    margin-right: 20px;
 }
 .link:hover{
     color: #32b473 !important;
     opacity: 50%;
 }
-.link.active{
+.link .active{
     color: #1c442f !important;
 }
 
