--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -163,8 +163,8 @@
 
 
 @media (max-width: 1440px) {
-     .container {
-         width: 80%;
+    .banner .container {
+         transform: scale(0.8);
     }
 }
 
