--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -13,6 +13,10 @@
     width: 20%;
     height: 20%;
 }
+.user{
+    display: flex;
+    justify-content: center;
+}
 
 .scrolled {
     background-color: #121212;
