--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -28,10 +28,11 @@
 
 .banner .container{
     min-height: 80vh;
-    max-width: 1200px;
+    max-width: 1280px;
     overflow: hidden;
     margin: 0 auto;
     display: flex;
+    padding: 100px;
     align-items: center;
     justify-content: space-between;
 }
@@ -165,6 +166,7 @@
 @media (max-width: 1440px) {
     .banner .container {
          transform: scale(0.8);
+         padding: 0;
     }
 }
 
