--- a/src/components/Checkout/CssModules/Addres.module.css
+++ b/src/components/Checkout/CssModules/Addres.module.css
@@ -1,5 +1,33 @@
-
-
+.address{
+    display: inline-block;
+    width: 100%;
+    height: 40vh;
+}
+.addressItem{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.inputCont{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.input1{
+    width: 300px;
+    padding: 5px;
+    height: 30px;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 .where{
     display: flex;
     margin-top: 50px;
