--- a/src/components/Checkout/CssModules/PaymentForm.module.css
+++ b/src/components/Checkout/CssModules/PaymentForm.module.css
@@ -1,7 +1,17 @@
 .container{
     display: flex;
+    height: 30px;
+    margin-bottom: 30px;
 }
-
+.superContainer{
+    display: inline-block;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.elementCont{
+    display: flex;
+    width: 552px;
+}
 
 .input{
     display: block;
@@ -12,7 +22,6 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    margin-left: 30px;
     color: #212529;
     background-color: #fff;
     background-clip: padding-box;
@@ -92,13 +101,13 @@
 .input1{
     display: block;
     width: 300px;
+    margin-right: 20px;
     padding: 5px;
     height: 30px;
     font-family: inherit;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    margin-left: 30px;
     color: #212529;
     background-color: #fff;
     background-clip: padding-box;
