--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -48,7 +48,7 @@
     margin-left: 20px;
 }
 .screen{
-    background-image: url("./spider.jpg");
+    background-color: #efe6e6;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
