--- a/src/components/Checkout/CssModules/PaymentForm.module.css
+++ b/src/components/Checkout/CssModules/PaymentForm.module.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 30px;
     margin-bottom: 30px;
+
 }
 .superContainer{
     display: inline-block;
@@ -23,6 +24,7 @@
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
+    margin-right: 20px;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #bdbdbd;
@@ -47,11 +49,11 @@
 }
 .where{
     display: flex;
-    margin-top: 50px;
+    margin-top: 20px;
     width: 100%;
-    padding-bottom: 50px;
     margin-right: 35px;
-    justify-content: space-between;
+    column-gap: 30px;
+    justify-content: center;
 }
 
 .button{
