--- a/src/components/Help/Help.module.css
+++ b/src/components/Help/Help.module.css
@@ -1,4 +1,4 @@
-.home {
+.help {
     background-color: #121212;
     background-position: top center;
     background-size: cover;
@@ -9,14 +9,21 @@
 }
 
 
-.home .container{
+.help .container{
+    padding-top: 60px;
     min-height: 80vh;
     max-width: 1280px;
     overflow: hidden;
     margin: 0 auto;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
+}
+@media (max-width: 1440px) {
+    .help .container {
+        width: 1100px;
+
+    }
 }
 
 .text {
@@ -24,6 +31,7 @@
     justify-content: center;
     align-items: center;
     text-align: left;
+    width: 380px;
 }
 
 .image{
@@ -43,7 +51,7 @@
     color: #FFFFFF;
 }
 .h1{
-    width: 487px;
+    width: 100%;
     margin-bottom: 20px;
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
@@ -54,9 +62,12 @@
 
     color: #FFFFFF;
 }
+.simple{
+    margin-bottom: 0px;
+    margin-left: 5px;
+}
 .p1{
-    width: 485px;
-    height: 168px;
+    width: 100%;
 
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
@@ -69,4 +80,82 @@
     /* Наборный текст */
 
     color: #BCBCBC;
+}
+.form{
+    display:inline-block;
+}
+.itemContainer{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    column-gap: 20px;
+}
+.item{
+
+}
+.message{
+    display: inline-block;
+    width:100%;
+    margin-bottom: 20px;
+}
+.authText{
+    display: flex;
+
+}
+.authText1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.inputContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.input{
+    display: block;
+    width: 150px;
+    padding: 5px;
+    height: 30px;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: transparent;
+    background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    border-radius: 10px;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.input::placeholder{
+    color: #000000;
+    opacity: 0.4;
+    padding-left: 0px;
+}
+.input:focus{
+    color: #212529;
+    background-color: #fff;
+    border-color: #bdbdbd;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
+}
+
+.buttonContainer{
+    display: flex;
+    justify-content: space-between;
+}
+.button{
+    width: 150px;
+    height: 50px;
+    color: #fff;
+    font-size: 20px;
+    background: #1c501c;
+    border-radius: 10px;
+}
+.button:hover{
+
+    opacity: 70%;
 }
