--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -8,6 +8,12 @@
     position : relative;
 }
 
+@media (max-width: 1440px) {
+    .home .container {
+        width: 1100px;
+
+    }
+}
 
 .home .container{
     min-height: 80vh;
