--- a/src/components/Help/Help.module.css
+++ b/src/components/Help/Help.module.css
@@ -122,7 +122,7 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: #ffffff;
     background-color: transparent;
     background-clip: padding-box;
     border: 1px solid #bdbdbd;
