--- a/src/components/AboutUs/AboutUs.module.css
+++ b/src/components/AboutUs/AboutUs.module.css
@@ -57,6 +57,7 @@
     font-weight: 700;
     letter-spacing: 0.8px;
     margin-bottom: 20px;
+    margin-top: 10px;
     display: block;
     -webkit-box-reflect: below 1px linear-gradient(transparent,#0008);
     line-height: 0.7em;
