--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -153,6 +153,7 @@
     display: flex;
     border-bottom : none;
     border-top: none;
+    margin-right: 35px;
 }
 .buttonRow{
     border-left: 1px solid rgba(175, 175, 175, 0.47);
