--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -32,7 +32,6 @@
     overflow: hidden;
     margin: 0 auto;
     display: flex;
-    padding: 100px;
     align-items: center;
     justify-content: space-between;
 }
@@ -165,10 +164,11 @@
 }
 
 
-@media (max-width: 1440px) {
+@media (max-width: 1400px) {
     .banner .container {
-         transform: scale(0.8);
-         padding: 0;
+        transform: scale(0.9);
+         width: 1100px;
+
     }
 }
 
