--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -8,13 +8,17 @@
     position : relative;
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1400px) {
     .home .container {
         width: 1100px;
-
+    }
+    .home .img{
+        width: 100% ;
     }
 }
-
+.img{
+    width: 100%;
+}
 .home .container{
     min-height: 80vh;
     max-width: 1280px;
@@ -34,7 +38,6 @@
 
 .image{
     display: flex;
-
 }
 .p{
     height: 17px;
