--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,4 +1,4 @@
-.help {
+.profile {
     background-image: #121212;
     background-position: top center;
     background-size: cover;
@@ -10,9 +10,9 @@
 }
 
 
-.help .container{
+.profile .container{
 
-    min-height: 80vh;
+    min-height: 60vh;
     max-width: 1280px;
     overflow: hidden;
     margin: 0 auto;
@@ -23,7 +23,7 @@
     background-size: cover;
 }
 @media (max-width: 1400px) {
-    .help .container {
+    .profile .container {
         width: 1100px;
 
     }
