--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -171,6 +171,16 @@
 
     }
 }
+@media (max-width: 1180px) {
+    .banner {
+        padding-top: 80px;
+    }
+    .banner .container {
+        transform:scale(0.84);
+
+    }
+
+}
 
 .button{
     margin-top: 20px;
